--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Biograf i Luleå",
   "main": "index.js",
   "scripts": {
-    "sass": "sass --no-source-map styles/main.scss styles/main.css",
-    "watch": "sass --no-source-map --watch styles/main.scss styles/main.css"
+    "sass": "sass --no-source-map styles/main.scss static/main.css",
+    "watch": "sass --no-source-map --watch styles/main.scss static/main.css"
   },
   "repository": {
     "type": "git",
