Add a lot of stuff

--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "lulenorthernlightscinema",
   "version": "1.0.0",
   "description": "Biograf i Luleå",
-  "main": "index.js",
+  "main": "js/server/server.js",
   "scripts": {
-
     "sass": "sass --no-source-map src/main.scss static/main.css",
-
-    "watch": "sass --no-source-map --watch src/main.scss static/main.css"
+    "watch": "sass --no-source-map --watch src/main.scss static/main.css",
+    "start": "nodemon ."
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/liber09/LuleNorthernLightsCinema.git"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -23,5 +23,9 @@
   "dependencies": {
     "node-sass": "^8.0.0",
     "sass": "^1.57.1"
+  },
+  "devDependencies": {
+    "express": "^4.18.2",
+    "express-handlebars": "^6.0.6"
   }
 }
