--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "homepage": "https://github.com/liber09/LuleNorthernLightsCinema#readme",
     "dependencies": {
         "express": "^4.18.2",
+        "express-handlebars": "^6.0.7",
+        "marked": "^4.2.12",
+        "node-fetch": "^3.3.0",
         "node-sass": "^8.0.0",
         "sass": "^1.57.1"
     },
