--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "sass": "sass --no-source-map src/main.scss static/main.css",
     "watch": "sass --no-source-map --watch src/main.scss static/main.css",
     "start": "nodemon .",
-    "test": "jest"
+    "test": "NODE_OPTIONS=--experimental-vm-modules npx jest"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "sass": "^1.57.1"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "express-handlebars": "^6.0.6",
     "jest": "^29.4.1"
