--- a/.github/workflows/integrate.yml
+++ b/.github/workflows/integrate.yml
@@ -14,4 +14,4 @@ jobs:
           node-version: 16
       - run: npm ci
       - run: npm test
-      - run: npm run build
+      # - run: npm run build
