--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
     },
     "homepage": "https://github.com/liber09/LuleNorthernLightsCinema#readme",
     "dependencies": {
+        "espress": "^0.0.0",
         "express": "^4.18.2",
         "express-handlebars": "^6.0.7",
         "marked": "^4.2.12",
         "node-fetch": "^3.3.0",
         "node-sass": "^8.0.0",
-        "sass": "^1.57.1"
+        "sass": "^1.58.0"
     },
     "devDependencies": {
         "nodemon": "^2.0.20",
