--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
         "start": "nodemon",
         "sass": "sass --no-source-map src/main.scss static/main.css",
         "watch": "sass --no-source-map --watch src/main.scss static/main.css",
-        "dev": "npm-run-all --parallel watch start"
+        "dev": "npm-run-all --parallel watch start",
+        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests/movie.test.js"
     },
     "repository": {
         "type": "git",
@@ -31,7 +32,12 @@
         "sass": "^1.58.0"
     },
     "devDependencies": {
+        "@babel/cli": "^7.20.7",
+        "@babel/core": "^7.20.12",
+        "@babel/preset-env": "^7.20.2",
+        "jest": "^29.4.3",
         "nodemon": "^2.0.20",
-        "npm-run-all": "^4.1.5"
+        "npm-run-all": "^4.1.5",
+        "supertest": "^6.3.3"
     }
 }
