--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
         "start": "nodemon",
         "sass": "sass --no-source-map src/main.scss static/main.css",
         "watch": "sass --no-source-map --watch src/main.scss static/main.css",
-        "dev": "npm-run-all --parallel watch start",
-        "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js tests/movie.test.js"
+        "dev": "npm-run-all --parallel watch start"
     },
     "repository": {
         "type": "git",
@@ -23,21 +22,15 @@
     },
     "homepage": "https://github.com/liber09/LuleNorthernLightsCinema#readme",
     "dependencies": {
-        "espress": "^0.0.0",
         "express": "^4.18.2",
         "express-handlebars": "^6.0.7",
         "marked": "^4.2.12",
         "node-fetch": "^3.3.0",
         "node-sass": "^8.0.0",
-        "sass": "^1.58.0"
+        "sass": "^1.57.1"
     },
     "devDependencies": {
-        "@babel/cli": "^7.20.7",
-        "@babel/core": "^7.20.12",
-        "@babel/preset-env": "^7.20.2",
-        "jest": "^29.4.3",
         "nodemon": "^2.0.20",
-        "npm-run-all": "^4.1.5",
-        "supertest": "^6.3.3"
+        "npm-run-all": "^4.1.5"
     }
 }
